--- a/Bonus.ipynb
+++ b/Bonus.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n"
      ]
     }
    ],
@@ -25,6 +23,7 @@
     "from helpers import *\n",
     "from classifiers.pca import *\n",
     "from classifiers.knn import *\n",
+    "from cifar_loading import *\n",
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -174,6 +173,35 @@
     "    test_accuracy = np.mean(test_predictions == y_test)\n",
     "    print(f'training accuracy {x} = {train_accuracy}')\n",
     "    print(f'testing accuracy {x} = {test_accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 32, 32, 3) [6 9 9 ..., 1 1 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_nf_train,Y_nf_train = load_CIFAR_batch('./non-faces/cifar-10-batches-py/data_batch_1')\n",
+    "print(X_nf_train.shape,Y_nf_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   }
  ],
