--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -31,9 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "root = 'orl_faces'\n",
@@ -50,127 +48,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "calculating S 1\n",
-      "calculating S 2\n",
-      "calculating S 3\n",
-      "calculating S 4\n",
-      "calculating S 5\n",
-      "calculating S 6\n",
-      "calculating S 7\n",
-      "calculating S 8\n",
-      "calculating S 9\n",
-      "calculating S 10\n",
-      "calculating S 11\n",
-      "calculating S 12\n",
-      "calculating S 13\n",
-      "calculating S 14\n",
-      "calculating S 15\n",
-      "calculating S 16\n",
-      "calculating S 17\n",
-      "calculating S 18\n",
-      "calculating S 19\n",
-      "calculating S 20\n",
-      "calculating S 21\n",
-      "calculating S 22\n",
-      "calculating S 23\n",
-      "calculating S 24\n",
-      "calculating S 25\n",
-      "calculating S 26\n",
-      "calculating S 27\n",
-      "calculating S 28\n",
-      "calculating S 29\n",
-      "calculating S 30\n",
-      "calculating S 31\n",
-      "calculating S 32\n",
-      "calculating S 33\n",
-      "calculating S 34\n",
-      "calculating S 35\n",
-      "calculating S 36\n",
-      "calculating S 37\n",
-      "calculating S 38\n",
-      "calculating S 39\n",
-      "calculating S 40\n",
-      "calculating B 1\n",
-      "calculating B 2\n",
-      "calculating B 3\n",
-      "calculating B 4\n",
-      "calculating B 5\n",
-      "calculating B 6\n",
-      "calculating B 7\n",
-      "calculating B 8\n",
-      "calculating B 9\n",
-      "calculating B 10\n",
-      "calculating B 11\n",
-      "calculating B 12\n",
-      "calculating B 13\n",
-      "calculating B 14\n",
-      "calculating B 15\n",
-      "calculating B 16\n",
-      "calculating B 17\n",
-      "calculating B 18\n",
-      "calculating B 19\n",
-      "calculating B 20\n",
-      "calculating B 21\n",
-      "calculating B 22\n",
-      "calculating B 23\n",
-      "calculating B 24\n",
-      "calculating B 25\n",
-      "calculating B 26\n",
-      "calculating B 27\n",
-      "calculating B 28\n",
-      "calculating B 29\n",
-      "calculating B 30\n",
-      "calculating B 31\n",
-      "calculating B 32\n",
-      "calculating B 33\n",
-      "calculating B 34\n",
-      "calculating B 35\n",
-      "calculating B 36\n",
-      "calculating B 37\n",
-      "calculating B 38\n",
-      "calculating B 39\n",
-      "calculating B 40\n",
-      "Calculating inverse\n",
-      "Done inverse calculation\n",
-      "Calculating eigenvectors\n",
-      "Done eigenvectors calculation\n",
-      "[ -7.77885272e+12 +0.00000000e+00j   6.96119885e+11 +0.00000000e+00j\n",
-      "   1.19776769e+03 +0.00000000e+00j ...,   4.57822775e-06 -1.80692599e-06j\n",
-      "  -1.05325869e-05 +0.00000000e+00j  -5.69591588e-06 +0.00000000e+00j]\n",
-      "[[ -1.84773645e-02+0.j          -2.33465114e-03+0.j           3.28297708e-03+0.j\n",
-      "  ...,   1.98502945e-03-0.00565966j  -2.74320314e-02+0.j\n",
-      "    2.22714966e-02+0.j        ]\n",
-      " [  1.83759045e-01+0.j          -1.79677955e-01+0.j           1.60879466e-01+0.j\n",
-      "  ...,  -1.17763681e-02+0.0013801j   -1.66326169e-03+0.j\n",
-      "    3.17200511e-03+0.j        ]\n",
-      " [  9.64873946e-01+0.j           8.61466779e-01+0.j          -8.76517464e-01+0.j\n",
-      "  ...,  -2.41289403e-03+0.00344699j   1.67728908e-02+0.j\n",
-      "    4.37878841e-03+0.j        ]\n",
-      " ..., \n",
-      " [ -1.63205480e-04+0.j          -2.92950816e-04+0.j           2.86492790e-04+0.j\n",
-      "  ...,  -6.26099091e-03-0.00079442j  -7.73385423e-03+0.j\n",
-      "   -9.63907997e-04+0.j        ]\n",
-      " [ -6.56764345e-04+0.j          -6.06134552e-04+0.j           6.20161258e-04+0.j\n",
-      "  ...,   9.87113683e-03+0.00167953j   1.19414803e-02+0.j\n",
-      "   -7.37597448e-03+0.j        ]\n",
-      " [ -6.83571518e-04+0.j          -2.25613094e-04+0.j           2.30190233e-04+0.j\n",
-      "  ...,  -9.24077590e-03+0.00273473j   1.46044669e-02+0.j\n",
-      "   -2.29798763e-02+0.j        ]]\n",
-      "computing projected data\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Dimensions of projection matrix not correct",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-bf8eb57b0cea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlda\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLDA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mU\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnoOfClasses\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m39\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mU\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m39\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Dimensions of projection matrix not correct\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: Dimensions of projection matrix not correct"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-bf8eb57b0cea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlda\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLDA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mU\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnoOfClasses\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m39\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32massert\u001b[0m \u001b[0mU\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m39\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Dimensions of projection matrix not correct\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Desktop/FaceRecognition/FaceRecognition/classifiers/lda.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(self, X, y, noOfClasses, r, load_path, verbose)\u001b[0m\n\u001b[1;32m     39\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'calculating S {cl+1}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m             \u001b[0mS\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m                                                \u001b[0;31m# sum class scatter matrices\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0;31m#between-class matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
